// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Assignment: Link table representing employee assignments to projects.
Employee: employees including their hierarchical info.
Project: projects employees are working on.
Benefit: benefit offerings within the company.
Department: different departments within the organization.
Position: job positions within the organization.
EmployeeSkill: Link table connecting employees to their skills.
Skill: skills that employees can possess.
EmployeeTraining: Link table representing employee participation in training sessions.
Training: training sessions available for employees.
Office: offices in different locations.
PerformanceReview: performance reviews for employees.
'''
}

Table Assignment {
    id INTEGER [primary key]
    employee_id INTEGER 
    project_id INTEGER 
    }

Table Employee {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    position_id INTEGER 
    department_id INTEGER 
    manager_id INTEGER 
    }

Table Project {
    id INTEGER [primary key]
    name VARCHAR 
    due_date DATETIME 
    }

Table Benefit {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    }

Table Department {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table Position {
    id INTEGER [primary key]
    title VARCHAR 
    salary_grade INTEGER 
    }

Table EmployeeSkill {
    id INTEGER [primary key]
    employee_id INTEGER 
    skill_id INTEGER 
    }

Table Skill {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table EmployeeTraining {
    id INTEGER [primary key]
    employee_id INTEGER 
    training_id INTEGER 
    }

Table Training {
    id INTEGER [primary key]
    title VARCHAR 
    course_date DATETIME 
    }

Table Office {
    id INTEGER [primary key]
    location VARCHAR 
    }

Table PerformanceReview {
    id INTEGER [primary key]
    employee_id INTEGER 
    review_date DATETIME 
    score FLOAT 
    }



// Relationships
    Ref: Assignment.(employee_id) < Employee.(id)
    Ref: Assignment.(project_id) < Project.(id)
    Ref: Employee.(department_id) < Department.(id)
    Ref: Employee.(manager_id) < Employee.(id)
    Ref: Employee.(position_id) < Position.(id)
    Ref: EmployeeSkill.(employee_id) < Employee.(id)
    Ref: EmployeeSkill.(skill_id) < Skill.(id)
    Ref: EmployeeTraining.(employee_id) < Employee.(id)
    Ref: EmployeeTraining.(training_id) < Training.(id)
    Ref: PerformanceReview.(employee_id) < Employee.(id)
